# block-puzzle-solver

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  cube-printer.py  main.cpp
Improved-NuMVC/: tsewf.hpp
data/: sample_output.txt  solution.csv
